--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -2,7 +2,7 @@ name: sbom
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs every hour
+    - cron: '0 0 * * *' 
   workflow_dispatch:  # Allows manual trigger from GitHub UI
 
 jobs:
