#29160 Adding changelog input.

--- a/.github/workflows/publish-starter.yml
+++ b/.github/workflows/publish-starter.yml
@@ -8,6 +8,10 @@ on:
         type: choice
         options:
           - 'Full Starter'
+      changelog:
+        description: 'Changes description'
+        required: true
+        type: string          
       dry-run:
         description: 'Enable dry-run mode'
         required: true
@@ -121,7 +125,9 @@ jobs:
           echo "filename=${FILENAME}" >> $GITHUB_OUTPUT
           echo "url=${URL}" >> $GITHUB_OUTPUT  
           echo "::notice::Artifact URL ${URL}"
+          echo "::notice::Changelog: ${{ github.event.inputs.changelog }}"
           echo "::endgroup::"
+
   send-notification:
     if: ${{ github.event.inputs.dry-run == 'false' }}
     needs: [ deploy-artifacts ]
@@ -139,10 +145,10 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "> :large_green_circle: *Attention dotters:* a new Starter published!\n \n>This automated script is happy to announce that a new *_${{ env.STARTER_TYPE }}_* :package: `${{ needs.deploy-artifacts.outputs.filename }}` is now available on `ARTIFACTORY` :frog:!\n \n>```${{ needs.deploy-artifacts.outputs.url }}```"
+                    "text": "> :large_green_circle: *Attention dotters:* a new Starter published!\n \n>This automated script is happy to announce that a new *_${{ env.STARTER_TYPE }}_* :package: `${{ needs.deploy-artifacts.outputs.filename }}` is now available on `ARTIFACTORY` :frog:!\n \n>```${{ needs.deploy-artifacts.outputs.url }}```\n>*Changelog:* \n>```${{ github.event.inputs.changelog }}```"
                   }
                 }
               ]
             }
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}    
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }} 
