--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5764,5 +5764,6 @@ edit.content.category-field.search.not-found.legend=Your search does not match a
 edit.content.category-field.search.error.title=Something went wrong
 edit.content.category-field.search.error.legend=Oops! Something went wrong. Please try again later.
 edit.content.category-field.category.root-name=Root
-
-
+edit.content.category-field.sidebar.empty-state=Click on the checkbox at the left to add categories.
+edit.content.category-field.search.empty.title=There are no categories yet
+edit.content.category-field.search.empty.legend=To create a new category, navigate to: Content model > Categories > Click the "+" Plus Button > Add.
