--- a/.github/filters.yaml
+++ b/.github/filters.yaml
@@ -1,3 +1,8 @@
+full_build_test: &full_build_test
+  - '.sdkmanrc'
+  - 'core-web/.nvmrc'
+  - '.nvmrc'
+
 backend: &backend
   - '.github/workflows/maven-cicd-pipeline.yml'
   - 'bom/**'
@@ -14,24 +19,22 @@ backend: &backend
   - 'plugins-core/**'
   - 'pom.xml'
   - 'reports/**'
+  - *full_build_test
 
 frontend: &frontend
   - 'core-web/**'
   - 'dotCMS/src/main/webapp/html/**/*.{css,js}'
+  - *full_build_test
 
 cli: &cli
   - 'tools/dotcms-cli/**'
-
-sdkman: &sdkman
-  -  '.sdkmanrc'
+  - *full_build_test
 
 jvm_unit_test:
   - *backend
   - *cli
-  - *sdkman
 
 build:
   - *backend
   - *cli
   - *frontend
-  - *sdkman
