commit hook and nx issues

--- a/core-web/nx.json
+++ b/core-web/nx.json
@@ -166,5 +166,6 @@
             }
         }
     ],
-    "defaultBase": "master"
+    "defaultBase": "master",
+    "ignorePatterns": ["**/node_modules"]
 }
