--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -24,7 +24,7 @@ jobs:
           response=$(curl -s https://api.github.com/repos/dotCMS/core/releases/latest)
           
           # Extract the tag name from the response and format it
-          latest_tag=$(echo "$response" | jq -r '.tag_name' | sed 's/^v//')
+          latest_tag=$(echo "$response" | jq -r '.tag_name' | sed -e 's/^dotcms-cli-//' -e 's/^v//')
           
           echo "Latest tag: $latest_tag"
           echo "DOTCMS_VERSION=$latest_tag" >> $GITHUB_ENV
