chore(ui): working in collapse bredcrumb

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5753,7 +5753,7 @@ edit.content.category-field.show-categories-dialog=Select
 edit.content.category-field.sidebar.header.select-categories=Select categories
 edit.content.category-field.sidebar.button.clear-all=Clear all
 
-edit.content.category-field.list.show.more={0} More
+edit.content.category-field.list.show.more=+ {0} More
 edit.content.category-field.list.show.less=Less
 
 edit.content.category-field.search.name=Name
