--- a/dotCMS/src/main/resources/apps/dotAI.yml
+++ b/dotCMS/src/main/resources/apps/dotAI.yml
@@ -28,6 +28,41 @@ params:
     label: "Text Prompt"
     hint: "A prompt describing writing style."
     required: false
+  textModelNames:
+    value: "gpt-3.5-turbo-16k"
+    hidden: false
+    type: "STRING"
+    label: "Model Names"
+    hint: "Comma delimited list of models used to generate OpenAI API response."
+    required: true
+  textModelTokensPerMinute:
+    value: "180000"
+    hidden: false
+    type: "STRING"
+    label: "Tokens per Minute"
+    hint: "Tokens per minute used to generate OpenAI API response."
+    required: false
+  textModelApiPerMinute:
+    value: "3500"
+    hidden: false
+    type: "STRING"
+    label: "API per Minute"
+    hint: "API per minute used to generate OpenAI API response."
+    required: false
+  textModelMaxTokens:
+    value: "16384"
+    hidden: false
+    type: "STRING"
+    label: "Max Tokens"
+    hint: "Maximum number of tokens used to generate OpenAI API response."
+    required: false
+  textModelCompletion:
+    value: "true"
+    hidden: false
+    type: "BOOL"
+    label: "Completion model enabled"
+    hint: "Enable completion model used to generate OpenAI API response."
+    required: false
   imagePrompt:
     value: "Use 16:9 aspect ratio."
     hidden: false
@@ -61,43 +96,8 @@ params:
         value: "1920x1080"
       - label: "256x256 (Small Square 1:1)"
         value: "256x256"
-  textModelNames:
-    value: ""
-    hidden: false
-    type: "STRING"
-    label: "Model Names"
-    hint: "Comma delimited list of models used to generate OpenAI API response."
-    required: true
-  textModelTokensPerMinute:
-    value: "180000"
-    hidden: false
-    type: "STRING"
-    label: "Tokens per Minute"
-    hint: "Tokens per minute used to generate OpenAI API response."
-    required: false
-  textModelApiPerMinute:
-    value: "3500"
-    hidden: false
-    type: "STRING"
-    label: "API per Minute"
-    hint: "API per minute used to generate OpenAI API response."
-    required: false
-  textModelMaxTokens:
-    value: "16384"
-    hidden: false
-    type: "STRING"
-    label: "Max Tokens"
-    hint: "Maximum number of tokens used to generate OpenAI API response."
-    required: false
-  textModelCompletion:
-    value: "false"
-    hidden: false
-    type: "BOOL"
-    label: "Completion model enabled"
-    hint: "Enable completion model used to generate OpenAI API response."
-    required: false
   imageModelNames:
-    value: ""
+    value: "dall-e-3"
     hidden: false
     type: "STRING"
     label: "Image Model Names"
@@ -132,12 +132,40 @@ params:
     hint: "Enable completion model used to generate OpenAI API response."
     required: false
   embeddingsModelNames:
-    value: ""
+    value: "text-embedding-ada-002"
     hidden: false
     type: "STRING"
     label: "Embeddings Model Names"
     hint: "Comma delimited list of embeddings models used to generate OpenAI API response."
     required: true
+  embeddingsModelTokensPerMinute:
+    value: "1000000"
+    hidden: false
+    type: "STRING"
+    label: "Embeddings Tokens per Minute"
+    hint: "Tokens per minute used to generate OpenAI API response."
+    required: false
+  embeddingsModelApiPerMinute:
+    value: "3000"
+    hidden: false
+    type: "STRING"
+    label: "Embeddings API per Minute"
+    hint: "API per minute used to generate OpenAI API response."
+    required: false
+  embeddingsModelMaxTokens:
+    value: "8191"
+    hidden: false
+    type: "STRING"
+    label: "Embeddings Max Tokens"
+    hint: "Maximum number of tokens used to generate OpenAI API response."
+    required: false
+  embeddingsModelCompletion:
+    value: "false"
+    hidden: false
+    type: "BOOL"
+    label: "Embeddings Completion model enabled"
+    hint: "Enable completion model used to generate OpenAI API response."
+    required: false
   listenerIndexer:
     value: ""
     hidden: false
