--- a/.github/workflows/build-test-master.yml
+++ b/.github/workflows/build-test-master.yml
@@ -17,6 +17,10 @@ on:
         description: 'Run all tests'
         type: boolean
         default: false
+      publish-npm-sdk-libs:
+        description: 'Publish NPM SDKs'
+        type: boolean
+        default: false        
 jobs:
   initialize:
     name: Initialize
@@ -75,6 +79,7 @@ jobs:
     with:
       artifact-run-id: ${{ needs.initialize.outputs.artifact-run-id }}
       environment: trunk
+      publish-npm-sdk-libs: ${{ (needs.initialize.outputs.sdk_libs == 'true' && github.event_name != 'workflow_dispatch') || (inputs.publish-npm-sdks && github.event_name == 'workflow_dispatch') }}
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
