--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: rashik1144/core-test-results
-          token: ${{ secrets.SECRET_PENTEST_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           path: core-test-results
 
       - name: Get dotCMS release version
@@ -66,4 +66,4 @@ jobs:
           git commit -m "Add SBOM for dotCMS version ${{ env.DOTCMS_VERSION }}" || echo "No changes to commit"
           git push origin master
         env:
-          GITHUB_TOKEN: ${{ secrets.SECRET_PENTEST_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
