make missing nx 17 migrations

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -11,7 +11,7 @@
         "start": "ng serve",
         "build": "ng build",
         "test": "nx test",
-        "lint": "nx workspace-lint && ng lint",
+        "lint": "ng lint",
         "e2e": "ng e2e dotcms-ui-e2e --headless true --base-url http://localhost:8080",
         "e2e:open": "ng e2e dotcms-ui-e2e --watch --base-url http://localhost:8080",
         "publish:dev": "rm -rf dist;npm run build:prod;cp package.json ./dist/apps/dotcms-ui/package.json;cd dist/apps/dotcms-ui",
@@ -157,7 +157,6 @@
         "@nx/eslint-plugin": "19.5.6",
         "@nx/jest": "19.5.6",
         "@nx/js": "19.5.6",
-        "@nx/linter": "19.5.6",
         "@nx/node": "19.5.6",
         "@nx/react": "19.5.6",
         "@nx/rollup": "19.5.6",
