@nrwl/linter was deprecated and replaced with @nx/eslint

--- a/core-web/libs/sdk/react/project.json
+++ b/core-web/libs/sdk/react/project.json
@@ -6,7 +6,7 @@
     "tags": [],
     "targets": {
         "lint": {
-            "executor": "@nrwl/linter:eslint",
+            "executor": "@nx/eslint:lint",
             "outputs": ["{options.outputFile}"],
             "options": {
                 "lintFilePatterns": ["libs/sdk/react/**/*.{ts,tsx,js,jsx}"]
