--- a/dotCMS/gradle.properties
+++ b/dotCMS/gradle.properties
@@ -1,4 +1,4 @@
-dotcmsReleaseVersion=23.10.24_lts
+dotcmsReleaseVersion=23.10.24_lts_v14
 coreWebReleaseVersion=next
 webComponentsReleaseVersion=next
 
